# CAT

./: CMakeLists.txt  Dockerfile  LICENSE  NOTICE  README.md
cmake/: CheckCXXIntrinsicsHeader.cmake  CheckCXXIntrinsicsSpecific.cmake  CheckMemset.cmake  CleanArtifacts.cmake  EnableCXX17.cmake  EnableCXXCompilerFlags.cmake  ExternalBenchmark.cmake  ExternalGTest.cmake  ExternalIntelHEXL.cmake  ExternalMSGSL.cmake  ExternalZLIB.cmake  ExternalZSTD.cmake  SEALConfig.cmake.in  SEALMacros.cmake  functions.iOS.cmake
native/bench/: CMakeLists.txt  bench.cpp  bench.h  bfv.cpp  bgv.cpp  ckks.cpp  keygen.cpp  ntt.cpp
native/examples/: 1_bfv_basics.cpp  2_encoders.cpp  3_levels.cpp  4_bgv_basics.cpp  4_ckks_basics.cpp  5_ckks_basics.cpp  5_ckks_basics_copy.cpp  5_rotation.cpp  6_performance.cpp  6_rotation.cpp  8_performance.cpp  CMakeLists.txt  examples.cpp  examples.h
native/src/seal/: CMakeLists.txt  batchencoder.cpp  batchencoder.cu  batchencoder.h  ciphertext.cpp  ciphertext.cuh  ckks.cpp  ckks.cu  ckks.h  context.cu  context.cuh  decryptor.cpp  decryptor.cu  decryptor.h  dynarray.h  encryptionparams.cpp  encryptionparams.cuh  encryptor.cpp  encryptor.cu  encryptor.h  evaluator.cpp  evaluator.cu  evaluator.h  galoiskeys.h  gpu_memorypool.h  keygenerator.cpp  keygenerator.cu  keygenerator.h  kswitchkeys.cpp  kswitchkeys.h  memorymanager.cpp  memorymanager.h  modulus.cpp  modulus.h  plaintext.cpp  plaintext.cuh  publickey.h  randomgen.cpp  randomgen.h  randomtostd.h  (+9 more)
native/src/seal/util/: CMakeLists.txt  blake2.h  blake2xb.c  clang.h  clipnormal.cpp  clipnormal.h  common.cpp  common.cuh  common.h  config.h.in  croots.cpp  croots.h  defines.h  dwthandler.h  fips202.c  fips202.h  galois.cpp  galois.cu  galois.h  gcc.h  globals.cpp  globals.h  gpu_data.h  hash.cpp  hash.h  helper.cu  helper.cuh  hestdparms.h  iterator.cpp  iterator.h  kuint128.cuh  locks.h  mempool.cpp  mempool.h  msvc.h  ntt.cpp  ntt.h  ntt_60bit.cu  ntt_60bit.cuh  ntt_helper.cu  (+32 more)
native/tests/: CMakeLists.txt
native/tests/seal/: CMakeLists.txt  batchencoder.cpp  ciphertext.cpp  ckks.cpp  context.cpp  dynarray.cpp  encryptionparams.cpp  encryptor.cpp  evaluator.cpp  galoiskeys.cpp  keygenerator.cpp  memorymanager.cpp  modulus.cpp  plaintext.cpp  publickey.cpp  randomgen.cpp  randomtostd.cpp  relinkeys.cpp  secretkey.cpp  serialization.cpp  testrunner.cpp
native/tests/seal/util/: CMakeLists.txt  clipnormal.cpp  common.cpp  galois.cpp  hash.cpp  iterator.cpp  locks.cpp  mempool.cpp  ntt.cpp  numth.cpp  polyarithsmallmod.cpp  polycore.cpp  rns.cpp  stringtouint64.cpp  uint64tostring.cpp  uintarith.cpp  uintarithmod.cpp  uintarithsmallmod.cpp  uintcore.cpp
pkgconfig/: seal.pc.in  seal_msgsl.pc.in  seal_shared.pc.in
tools/: Makefile
